<resources>
    <string name="app_name">TelTail Lights</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="settings_label">Settings</string>
    <string name="bluetooth_label">Configure Bluetooth</string>
    <string name="logging_label">Configure Logging</string>
    <string name="sensors_label">Configure Sensors</string>
    <string name="orientation_label">Configure Orientation</string>
    <string name="remote_config_label">Configure Remote Settings</string>
    <string name="esc_config_label">Configure ESC Settings</string>
    <string name="controls_label">Configure Controls</string>
    <string name="lights_label">Configure Lights</string>
    <string name="calibrate_button">Calibrate IMU</string>
    <string name="motor_info_label">Motor Info</string>
    <string name="fw_settings_label">Firmware Settings</string>
    <string name="import_export_settings_label">Import/Export Settings</string>
    <string name="setup_wizard_label">Setup Wizard</string>

    <string name="ble_button">Connect BLE</string>

    <string name="log_button">Start Logging</string>

    <string name="remote_label">Remote</string>
    <string name="remote_button">Remote</string>
    <string name="remote_help">Help</string>
    <string name="remote_connect">Connect/Disconnect</string>

    <string name="toggle_button">Toggle LEDs</string>

    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>

    <string name="location_permission_denied">This app requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>

    <string name="permission_required_toast">Location permission is required for this app.</string>

    <string name="ble_not_supported">BLE is not supported</string>

    <string name="label_data">Data:</string>

    <string name="label_device_address">Device address:</string>

    <string name="label_state">State:</string>

    <string name="no_data">No data</string>

    <string name="connected">Connected</string>

    <string name="disconnected">Disconnected</string>

    <string name="title_devices">BLE Device Scan</string>

    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>

    <string name="unknown_characteristic">Unknown characteristic</string>

    <string name="shuffle_text">Include in Shuffle</string>

    <!--    Permissions    -->
    <string name="unknown_service">Unknown service</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="analog_modes_array">
        <item>Static</item>
        <item>Color Cycling</item>
        <item>Compass Cycle</item>
        <item>Throttle Based</item>
        <item>RPM Based</item>
        <item>RPM + Throttle</item>
        <item>X Accel Based</item>
        <item>Y Accel Based</item>
        <item>Custom</item>
    </string-array>
    <string-array name="digital_modes_array">
        <item>Static</item>
        <item>Skittles</item>
        <item>Gradient Cycle</item>
        <item>Compass Cycle</item>
        <item>Throttle Based</item>
        <item>RPM Based</item>
        <item>RPM + Throttle</item>
        <item>Compass Wheel</item>
        <item>Compass Snake</item>
    </string-array>
    <string-array name="color_base_array">
        <item>Static</item>
        <item>Cycling</item>
        <item>Compass</item>
        <item>Yaw Rate</item>
        <item>Roll Rate</item>
        <item>Pitch Rate</item>
        <item>Throttle</item>
        <item>RPM</item>
        <item>X Acceleration</item>
        <item>Y Acceleration</item>
        <item>Z Acceleration</item>
    </string-array>
    <string-array name="bright_base_array">
        <item>Static</item>
        <item>Yaw Rate</item>
        <item>Roll Rate</item>
        <item>RPM</item>
        <item>Throttle</item>
        <item>X Acceleration</item>
        <item>Y Acceleration</item>
        <item>Z Acceleration</item>
        <item>Strobe</item>
    </string-array>
    <string-array name="rate_base_array">
        <item>Static</item>
        <item>Yaw Rate</item>
        <item>Roll Rate</item>
        <item>RPM</item>
        <item>Throttle</item>
        <item>X Acceleration</item>
        <item>Y Acceleration</item>
        <item>Z Acceleration</item>
    </string-array>
    <string-array name="orientation_array">
        <item>Unknown</item>
        <item>Up</item>
        <item>Down</item>
        <item>Left</item>
        <item>Right</item>
        <item>Rear</item>
        <item>Front</item>
    </string-array>
    <string-array name="aux_type_array">
        <item>Momentary</item>
        <item>Toggle</item>
        <item>Timed</item>
    </string-array>
    <string-array name="aux_control_array">
        <item>None</item>
        <item>Single Tap</item>
        <item>Double Tap</item>
        <item>Triple Tap</item>
        <item>Medium Press (0.5>&lt;1s)</item>
        <item>Long Press (> 1s)</item>
    </string-array>
    <string-array name="single_control_button_array">
        <item>None</item>
        <item>Single Tap</item>
        <item>Double Tap</item>
        <item>Triple Tap</item>
        <item>Medium Press (0.5>&lt;1s)</item>
        <item>Long Press (> 1s)</item>
    </string-array>
    <string-array name="dual_control_button_array">
        <item>None</item>
        <item>Single Tap</item>
        <item>Double Tap</item>
        <item>Triple Tap</item>
        <item>Left + Single Tap</item>
        <item>Right + Single Tap</item>
        <item>Medium Press (0.5>&lt;1s)</item>
        <item>Long Press (> 1s)</item>
    </string-array>

    <string-array name="gps_array">
        <item>Current Ride</item>
        <item>Since Charge</item>
        <item>All RIdes</item>
    </string-array>
    <string-array name="rgb_type_array">
        <item>Analog</item>
        <item>Digital (APA102)</item>
        <item>Digital (SK9822)</item>
        <item>None</item>
    </string-array>
    <string-array name="led_strip_type_array">
        <item>Analog</item>
        <item>Digital</item>
        <item>None</item>
    </string-array>
    <string-array name="brake_mode_array">
        <item>Fade</item>
        <item>Blink</item>
        <item>Fade-Blink</item>
        <item>Blink-Fade</item>
        <item>Fading Blink</item>
        <item>Paced Blink</item>
    </string-array>
    <string-array name="hardware_array">
        <item>v3.4</item>
        <item>v4.1</item>
    </string-array>
    <string-array name="control_scheme_array">
        <item>Recommended</item>
        <item>Custom</item>
    </string-array>
    <string-array name="write_action_array">
        <item>Write directly to TTL system</item>
        <item>Save an settings import file</item>
        <item>Write to TTL + save import file</item>
    </string-array>
    <string-array name="wizard_remote_array">
        <item>Hoyt Puck</item>
        <item>Enertion Nano</item>
        <item>Torque Boards Nano</item>
        <item>Torque Boards Mini</item>
        <item>VX1 (using PWM output)</item>
        <item>VX3 (using PWM output)</item>
        <item>GT2B</item>
        <item>APS 2.4GHz</item>
        <item>Maytech 2.4GHz</item>
        <item>Maytech Waterproof(using PWM)</item>
        <item>Other</item>
    </string-array>
    <string-array name="wizard_orientation_array">
        <item>Up</item>
        <item>Down</item>
        <item>Left</item>
        <item>Right</item>
        <item>Rear</item>
        <item>Front</item>
    </string-array>

    <!-- A list of app settings -->
    <string-array name="all_app_settings_list_array">
        <item>Connect BLE on Startup</item>
        <item>Enable Logging</item>
    </string-array>
    <!-- A list of all led settings -->
    <string-array name="led_settings_list_array">
        <item>Current Mode</item>
        <item>Head-Brake Enabled</item>
    </string-array>
    <!-- A list of all remote settings -->
    <string-array name="remote_settings_list_array">
        <item>Remote Type</item>
        <item>Brake Deadzone</item>
    </string-array>
    <!-- A list of all controls settings -->
    <string-array name="controls_settings_list_array">
        <item>Horn Enabled</item>
        <item>Horn Control Type</item>
        <item>Brake Deadzone</item>
    </string-array>
    <!-- A list of all orientation settings -->
    <string-array name="orientation_settings_list_array">
        <item>Connector Orientation</item>
        <item>Power Orientation</item>
    </string-array>
</resources>
